Webservice/kubernetes/webservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: webservice
  name: webservice
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8443
  selector:
    io.kompose.service: webservice
  type: LoadBalancer
status:
  loadBalancer: {}
