Webservice/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: cert-prepeat
spec:
  rules:
    - host: prep-eat.ml
    - http:
        paths:
        - path: /*
          backend:
            serviceName: webservice
            servicePort: 80
